--- a/package.json
+++ b/package.json
@@ -11,14 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "5.0.0",
     "body-parser": "^1.19.0",
+    "cors": "2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "handlebars": "^4.7.6",
     "hbs": "^4.1.1",
+    "jsonfile": "6.0.1",
     "mysql": "^2.18.1",
-    "nodemon": "^2.0.6",
-    "bcrypt": "5.0.0",
-    "cors": "2.8.5",
-    "jsonfile": "6.0.1"
+    "nodemon": "^2.0.6"
   }
 }
