--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "handlebars": "^4.7.6",
+    "express-handlebars": "^5.2.0",
     "hbs": "^4.1.1",
     "jsonfile": "6.0.1",
     "mysql": "^2.18.1",
