--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Chartjs",
+  "name": "chartjs",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -16,8 +16,7 @@
     "cors": "2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "handlebars": "^4.7.6",
-    "express-handlebars": "^5.2.0",
+    "handlebars": "^4.7.6",      
     "hbs": "^4.1.1",
     "jsonfile": "6.0.1",
     "mysql": "^2.18.1",
