--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@ DATABASE = road_accident
 DATABASE_HOST = localhost
 DATABASE_USER = root
 DATABASE_PASSWORD = 
-NEW_DATABASE = college_mp
+NEW_DATABASE = college_mp_2
 NEW_DATABASE_HOST = insurance-claim.mysql.database.azure.com
 NEW_DATABASE_USER = harshad@insurance-claim
 NEW_DATABASE_PASSWORD = password123$
