Added Recycle Bin

--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
-DATABASE = road_accident
-DATABASE_HOST = localhost
-DATABASE_USER = root
-DATABASE_PASSWORD = 
-NEW_DATABASE = college_mp_2
-NEW_DATABASE_HOST = insurance-claim.mysql.database.azure.com
-NEW_DATABASE_USER = harshad@insurance-claim
-NEW_DATABASE_PASSWORD = password123$
+NEW_DATABASE = road_accident
+NEW_DATABASE_HOST = localhost
+NEW_DATABASE_USER = root
+NEW_DATABASE_PASSWORD = 
+NEW_NEW_DATABASE = college_mp_2
+NEW_NEW_DATABASE_HOST = insurance-claim.mysql.database.azure.com
+NEW_NEW_DATABASE_USER = harshad@insurance-claim
+NEW_NEW_DATABASE_PASSWORD = password123$
