--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "appService.zipIgnorePattern": [
         "node_modules{,/**}",
         ".vscode{,/**}"
-    ]
+    ],
+    "workbench.colorCustomizations": {
+        "activityBar.background": "#2B3106",
+        "titleBar.activeBackground": "#3C4408",
+        "titleBar.activeForeground": "#F9FCE5"
+    }
 }
